traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:17: error: type mismatch;
 found   : Unit
 required: Boolean
  if (isFacingWall) {
                    ^Snake:17: error: type mismatch;
 found   : Unit
 required: Boolean
  if (isFacingWall) {
  ^